--- a/.htaccess
+++ b/.htaccess
@@ -45,6 +45,7 @@ RewriteRule ^registration/?$ registration.php [NC]
 RewriteRule ^policy/?$ policy.php [NC]
 RewriteRule ^rules/?$ rules.php [NC]
 RewriteRule ^team/?$ team.php [NC]
+RewriteRule ^teams/?$ teams.php [NC]
 RewriteRule ^terms/?$ terms.php [NC]
 RewriteRule ^privacy-policy/?$ policy.php [NC]
 RewriteRule ^disclaimer/?$ disclaimer.php [NC]
